# vicara

./: ARCHITECTURE.md  Architecture.md  BACKLOG.md  FUTURE_CONCEPT.md  MODULE_MAP.json  PRODUCT_CONTEXT.md  README.md  README_en.md  Rule.md  eslint.config.js  handoff.md  index.html  package-lock.json  package.json  take_screenshots.mjs
.claude/: settings.local.json
.github/workflows/: release.yml
docs/01_ai_scrum_tool_init/: implementation_plan.md  task.md  walkthrough.md
docs/02_frontend_db_and_kanban_setup/: implementation_plan.md  task.md  walkthrough.md
docs/03_crud_ui_implementation/: implementation_plan.md  task.md  walkthrough.md
docs/04_ai_task_generation/: implementation_plan.md  task.md  walkthrough.md
docs/05_micro_scrum_engine/: implementation_plan.md  task.md  walkthrough.md
docs/06_kanban_optimistic_ui_and_performance/: implementation_plan.md  task.md  walkthrough.md
docs/07_task_markdown/: implementation_plan.md  task.md  walkthrough.md
docs/08_sprint_archive_and_history/: implementation_plan.md  task.md
docs/10_create_readme/: implementation_plan.md  task.md  (+1 more)
releases/: v2.0.0.md  v2.1.0.md  v2.2.0.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 12_team_configuration.sql  13_task_role_assignment.sql  14_worktrees_review.sql  16_avatar_images.sql  18_retrospective_notes.sql  1_init.sql  20_agent_retro_logs.sql  4_add_archived_column.sql  5_add_local_path.sql  8_ai_team_leader.sql
src-tauri/src/: agent_retro.rs  agent_runner.rs  ai.rs  ai_tools.rs  claude_runner.rs  db.rs  git.rs  inception.rs  lib.rs  llm_observability.rs  main.rs  node_dependencies.rs  preview.rs  pty_commands.rs  pty_manager.rs  rig_provider.rs  scaffolding.rs  worktree.rs
src-tauri/src/agent_retro/: claude_stream.rs  mod.rs
src-tauri/src/agent_runner/: lifecycle.rs  prompting.rs  session.rs
src-tauri/src/agent_runner/spawn/: completion.rs  mod.rs  timeout.rs  unix.rs  windows.rs
src-tauri/src/ai/: common.rs  idea_refine.rs  inception.rs  retro.rs  task_generation.rs  team_leader.rs
src-tauri/src/ai/team_leader/: heuristics.rs  prompts.rs
src-tauri/src/ai/team_leader/plan/: apply.rs  fallback.rs  mod.rs
src-tauri/src/cli_runner/: claude.rs  codex.rs  gemini.rs  mod.rs
src-tauri/tests/: worktree_test.sh
(+158 files in other folders)
