[package]
name = "ai-scrum-tool"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_scrum_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2.4.2"
reqwest = { version = "0.13.2", features = ["json"] }
regex = "1.12.3"
uuid = { version = "1.22.0", features = ["v4"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.50.0", features = ["time", "rt", "rt-multi-thread", "macros"] }
tauri-plugin-dialog = "2"
rig-core = { version = "0.33.0", default-features = false, features = ["reqwest-native-tls"] }
portable-pty = "0.9.0"
log = "0.4"
env_logger = "0.11"
